[FIX] register flickering

--- a/src/app/pages/register/register.component.scss
+++ b/src/app/pages/register/register.component.scss
@@ -218,8 +218,7 @@
         .software {
             .wrapper {
                 max-width: unset;
-                height: 100%;
-                max-height: 40rem;
+                height: fit-content;
                 
                 .content {
                     grid-template-rows: 1fr 20rem 1fr;
